--- a/footer.html
+++ b/footer.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css&quot;" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
    <link rel="stylesheet" href="footer.css">
   <title>footer</title>
 </head>
@@ -17,11 +17,11 @@
     <p>si estas interesado en contactarme,puedes hacerlo a atraves de cualquiera de las siguientes 
         redes Sociales:</p>
         <a href="http://www.facebook.com/miperfil" 
-        target="_blank"><i class="fab fa-facebook">facebook</i></a>
+        target="_blank"><i class="fab fa-facebook"></i></a>
         <a href="http://www.instagram.com/miperfil" 
-        target="_blank"><i class="fab fa-instagram">instagram</i></a>
+        target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="http://www.twitter.com/miperfil" 
-        target="_blank"><i class="fab fa-twitter">twitter</a>
+        target="_blank"><i class="fab fa-twitter"></i></a>
         </div>
       </div>
     </div>
