--- a/movies1.html
+++ b/movies1.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
         <link href="https://fonts.cdnfonts.com/css/fruinky" rel="stylesheet">
         <link href="https://fonts.cdnfonts.com/css/levitation" rel="stylesheet">
@@ -103,11 +104,13 @@
     <p>si estas interesado en contactarme,puedes hacerlo a atraves de cualquiera de las siguientes 
         redes Sociales:</p>
         <a href="http://www.facebook.com/miperfil" 
-        target="_blank"><i class="fab fa-facebook">facebook</i></a>
+        target="_blank"><i class="fab fa-facebook"></i></a>
         <a href="http://www.instagram.com/miperfil" 
-        target="_blank"><i class="fab fa-instagram">instagram</i></a>
+        target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="http://www.twitter.com/miperfil" 
-        target="_blank"><i class="fab fa-twitter">twitter</a>
+        target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="http://www.discord.com/miperfil" 
+        target="_blank"><i class="fab fa-discord"></i></a>
         </div>
       </div>
     </div>
