--- a/perfil.html
+++ b/perfil.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="thecure.css">
   <title>Perfil</title>
 </head>
@@ -11,11 +12,132 @@
 <body>
 <table class="perfil">
   <tr>
-    <td><img src="hobi.jpg" alt="foto de hoseok de BTS"></td>
-    <td>nombre: Jung Hoseok</td>
+    <td><img src="hobi.jpg" alt="foto de hoseok de BTS" style="width: 200px; height: 200px; position: relative; overflow:hidden; display: block; margin: 0 0 0 0%; -webkit-border-radius: 50%;
+    -moz-border-radius:50%; -ms-border-radius:50%; -o-border-radius:50%; border-radius: 50%; border: 10px Double mediumpurple"></td>
+    <td>
+      <p>Genero: <b>Masculino</p></b>
+      <p>Raza: <b>Latino</b></p>
+      <p>Cumpleaños: <b>16/4/95</b></p>
+      <p>Calle, Ciudad, CP: <b>random</b></p>
+      <p>Telefono: <b>134-340-1108</b></p>
+      <p>Celular: <b>110-813-4340</b></p></td>
+      
+  </tr>
+  <tr>
+    <td>
+      <b>Jung Hoseok</b>
+    </td>
   </tr>
 </table>
+<table>
+  <tr>
+    <td>
+      <i class="fa fa-user" aria-hidden="true" style="color: gray"></i>
+      <cc class="">INFORMACIÓN BASICA</cc>
+      <i class="fa fa-question-circle" aria-hidden="true" style="color: rgb(159,157,157)"></i>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">E-Mail:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Altura:</p>
+        <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Peso:</p>
+         <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Color de Pelo:</p>
+          <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Tipo de Sangre:</p>
+           <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Signo Zodiacal:</p>
+            <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Apellido materno:</p>
+             <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Estado civil:</p>
+              <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Educación:</p>
+               <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Historial de enfermedades:</p>
+           </td>
+           <td>
+           <p>hobi@gmail.com</p>
+           <p>1.77</p>
+           <p>65kg</p>
+           <p>Negro</p>
+           <p>Azul</p>
+           <p>Acuario</p>
+           <p>Jung</p>
+           <p>Soltero</p>
+           <p>Superior</p>
+           <p>Ninguna</p>
+           </td>
+  </tr>
+  <tr>
+    <td>
+        <i class="fa fa-check-square" aria-hidden="true" style="color: gray"></i>
+        <cc class="">INFORMACIÓN BASICA</cc>
+        <i class="fa fa-question-circle" aria-hidden="true" style="color: rgb(159,157,157)"></i>
+    </td>
+  </tr>
+   <tr>
+     <td>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Estatus del empleo:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Titulo laboral:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Nombre de la compañia:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Tamaño de la compañia:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Industria:</p>
+     </td>
+     <td>
+       <p>Trabajo de tiempo completo</p>
+       <p>$50,000 mensuales</p>
+       <p>Big Hit</p>
+       <p>30000 7000</p>
+       <p>Musica</p>
+     </td>
+   </tr>
+    <tr>
+    <td>
+        <i class="fa fa-file" aria-hidden="true" style="color: gray"></i>
+        <cc class="">INFORMACIÓN PERSONAL</cc>
+        <i class="fa fa-question-circle" aria-hidden="true" style="color: rgb(159,157,157)"></i>
+    </td>
+  </tr>
+   <tr>
+     <td>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Miembros de la familia:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Vehículo:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Estado en línea:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Firma en línea:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Biografía en línea:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Interés:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Color favorito:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Película favorita:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Música favorita:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Canción favorita:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Libro favorito:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Deportes favoritos:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Televisión favorita:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Estrella de cine favorita:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Cantante favorito:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Comida favorita:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Personalidad:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Estilo personal:</p>
+       <p style="color: gray; font-family: Verdana, Geneva, Tahoma, sans-serif;">Sitio web:</p>
+       
+     </td>
+     <td>
+       <p>4 miembros</p>
+       <p>Hyundai IONIQ 5</p>
+       <p>Algunas luces son ambiciosas,</p>
+       <p>Hope right here!!</p>
+       <p>Compositor,bailarin,coreografo,cantante,etc..</p>
+       <p>Hip hop,Bailar...</p>
+       <p>Verde</p>
+       <p>The Fight</p>
+       <p>Hi hop</p>
+       <p>On the street-J hope ft J Cole</p>
+       <p>Codigo da vinci-Dawn Brown</p>
+       <p>Patinaje sobre hielo</p>
+       <p>The office</p>
+       <p>Kim Taehyung</p>
+       <p>J Cole</p>
+       <p>Tteobokki</p>
+       <p>Positivo</p>
+       <p>Street</p>
+       <p>hopeworld.com</p>
+     </td>
+   </tr>
+</table>
 </body>
-
-
 </html>
