--- a/viernes19May.html
+++ b/viernes19May.html
@@ -36,11 +36,11 @@
     <p>si estas interesado en contactarme,puedes hacerlo a atraves de cualquiera de las siguientes 
         redes Sociales:</p>
         <a href="http://www.facebook.com/miperfil" 
-        target="_blank"><i class="fab fa-facebook">facebook</i></a>
+        target="_blank"><i class="fab fa-facebook"></i></a>
         <a href="http://www.instagram.com/miperfil" 
-        target="_blank"><i class="fab fa-instagram">instagram</i></a>
+        target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="http://www.twitter.com/miperfil" 
-        target="_blank"><i class="fab fa-twitter">twitter</a>
+        target="_blank"><i class="fab fa-twitter"></i></a>
         </div>
       </div>
     </div>
