--- a/calculadorafisica.html
+++ b/calculadorafisica.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css&quot;" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
         <link href="https://fonts.cdnfonts.com/css/fruinky" rel="stylesheet">
         <link href="https://fonts.cdnfonts.com/css/levitation" rel="stylesheet">
@@ -171,7 +171,7 @@ document.getElementById('resultado').innerHTML=resultado;
 <div id="footer"></div>
 <script>
   $(function(){
-    $("#footer").load("/restauranton/footer.html");
+    $("#footer").load("External/restauranton/footer.html");
   });
 </script>
 </body>
