--- a/index.html
+++ b/index.html
@@ -48,11 +48,43 @@
             </div>
          </nav>
     </div>
-      
+    <style>
+      body{
+        background-color: powderblu;
+        color: rebeccapurple;
+        font-family: Levitation;
+      }
+      div{
+        position: relative;
+      }
+      video{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height:100%;
+        object-fit: cover;
+      }
+      .titulo{
+        background: black;
+        font-size: 150px;
+        text-align: center;
+        font-weight: 200;
+        mix-blend-mode: multiply;
+      }
+    </style>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <video autoplay muted preload loop></video>
+        <source src="famevideo.mp4" type="video/mp4">
+        <h1 class="titulo">BIENVENIDOS A MI PAGINA</h1>
+        <p class="lead"></p>
+      </div>
+    </div>
       <div id="footer"></div>
 <script>
   $(function(){
-    $("#footer").load("restauranton/footer.html");
+    $("#footer").load("/footer.html");
   });
 </script>
 </body>
