--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
     </div>
     <style>
       body{
-        background-color: powderblu;
+        background-color: powderblue;
         color: rebeccapurple;
-        font-family: Levitation;
       }
       div{
         position: relative;
@@ -66,20 +65,20 @@
         object-fit: cover;
       }
       .titulo{
-        background: black;
-        font-size: 150px;
+        font-family: Levitation;
+        background: white;
+        font-size: 85px;
         text-align: center;
-        font-weight: 200;
+        font-weight: 200px;
         mix-blend-mode: multiply;
       }
     </style>
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumpbotron jumpbotron-fluid">
       <div class="container">
         <video autoplay muted preload loop></video>
         <source src="famevideo.mp4" type="video/mp4">
         <h1 class="titulo">BIENVENIDOS A MI PAGINA</h1>
-        <p class="lead"></p>
-      </div>
+      </div><br>
     </div>
       <div id="footer"></div>
 <script>
