--- a/perfil.html
+++ b/perfil.html
@@ -119,7 +119,7 @@
      <td>
        <p>4 miembros</p>
        <p>Hyundai IONIQ 5</p>
-       <p>Algunas luces son ambiciosas,</p>
+       <p>El cielo brilla por nosotros.</p>
        <p>Hope right here!!</p>
        <p>Compositor,bailarin,coreografo,cantante,etc..</p>
        <p>Hip hop,Bailar...</p>
