--- a/calculadorafisica.html
+++ b/calculadorafisica.html
@@ -171,7 +171,7 @@ document.getElementById('resultado').innerHTML=resultado;
 <div id="footer"></div>
 <script>
   $(function(){
-    $("#footer").load("External/restauranton/footer.html");
+    $("#footer").load("/footer.html");
   });
 </script>
 </body>
