--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
         <link href="https://fonts.cdnfonts.com/css/fruinky" rel="stylesheet">
         <link href="https://fonts.cdnfonts.com/css/levitation" rel="stylesheet">
+        <link href="https://fonts.cdnfonts.com/css/game-played-outline" rel="stylesheet">
                       
             <link rel="stylesheet" href="style.css">
     <title>Inicio</title>
@@ -65,7 +66,7 @@
         object-fit: cover;
       }
       .titulo{
-        font-family: Levitation;
+        font-family: 'Game played Outline', sans-serif;
         background: white;
         font-size: 85px;
         text-align: center;
@@ -75,8 +76,7 @@
     </style>
     <div class="jumpbotron jumpbotron-fluid">
       <div class="container">
-        <video autoplay muted preload loop></video>
-        <source src="famevideo.mp4" type="video/mp4">
+        <video autoplay muted preload loop><source src="famevideo.mp4" type="video/mp4"></video>
         <h1 class="titulo">BIENVENIDOS A MI PAGINA</h1>
       </div><br>
     </div>
