--- a/apimovies.html
+++ b/apimovies.html
@@ -59,13 +59,101 @@
       <section id="name" class="movies">
       </section>
       </div>
+      <style>
+      .container{
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 0 20px;
+      }
+      h1{
+        text-align: center;
+        margin-top: 50px;
+        margin-bottom: 30px;
+      }
+      form{
+        display: flex;
+        justify-content: center;
+        margin-bottom: 50px;
+      }
+      input[type="text"]{
+        font-size: 1.2rem;
+        padding: 10px;
+        border-radius: 5px;
+        border: none;
+        margin-left: 10px;
+        cursor: pointer;
+      }
+      input[type = "submit"] {
+        font-size: 1.2rem;
+        padding: 10px 20px;
+        border-radius: 5px;
+        border: none;
+        margin-left: 10px;
+        cursor: pointer;
+      }
+      input[type = "submit"]:hover {
+        background-color:#1c6ea4;
+        color: white;
+      }
+      .movies{
+        display:grid;
+        grid-template-columns:repeat(auto-fit, minmax(300px,1fr));
+        grid-gap: 20px;
+      }
+      .movie{
+        position: relative;
+      }
+      .movie img{
+        width: 100%;
+        height: auto;
+        border-radius: 15px;
+      }
+      .movie-info{
+        background-color:black;
+        color: #ffff;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+        text-align: center;
+      }
+      .movie:hover .movie-info{
+        opacity: 1;
+        border-radius: 15px;
+      }
+      .movie-info h3{
+        font-style: 20px;
+        margin-bottom: 18px
+      }
+      .movie-info span{
+        font-size: 30px;
+        font-weight: bold;
+        margin-bottom: 18px;
+      }
+      .green{
+        color: seagreen;
+      }
+      .orange{
+        color: orange;
+      }
+      .red{
+        color: indianred;
+      }
+      </style>
       <script>
-//En esta línea se define la URL de la API para obtener la lista de películas.
-const API_URL = 'https://api.themoviedb.org/3/discover/movie?sort_by=popularity.desc&api_key=3fd2be6f0c70a2a598f084ddfb75487c&page=1&#39';
+      //En esta línea se define la URL de la API para obtener la lista de películas.
+const API_URL = 'https://api.themoviedb.org/3/discover/movie?sort_by=popularity.desc&api_key=3fd2be6f0c70a2a598f084ddfb75487c&page=1';
 //Esta línea define la URL de la API para obtener las imágenes de las películas.
-const IMG_PATH = 'https://image.tmdb.org/t/p/w1280&#39';
+const IMG_PATH = 'https://image.tmdb.org/t/p/w1280';
 //En esta línea se define la URL de la API para buscar películas.
-const SEARCH_API = 'https://api.themoviedb.org/3/search/movie?api_key=3fd2be6f0c70a2a598f084ddfb75487c&query="&#39';
+const SEARCH_API = 'https://api.themoviedb.org/3/search/movie?api_key=3fd2be6f0c70a2a598f084ddfb75487c&query=';
 const main=document.getElementById('main')
 const form=document.getElementById('form')
 const search=document.getElementById('search')
@@ -85,18 +173,18 @@ function showMovies(Movies){
     
     movieEl.classList.add('movie');
     movieEl.innerHTML=`
-    <img src="${IMG_PATH+poster_path}" alt="${title}"
+    <img src="${IMG_PATH+poster_path}" alt="${title}">
     <div class="movie-info">
-      <h3>${title}
+      <h3>${title}</h3>
       <span class="${getClassByRate(vote_average)}">${vote_average}</span></div>
       <div class="overview">
-        <h3>Overview</h3>
-        ${Overview}
+        <h3>overview</h3>
+        ${overview}
         <h3>Release Date</h3>
-        ${realese_date}</div>`;
+        ${realese_date}</div>`
         main.appendChild(movieEl);
-  });
-};
+  })
+}
 function getClassByRate(vote){
   if(vote>=8){
     return 'green';
@@ -116,7 +204,6 @@ form.addEventListener('submit',(e)=>{
     window.location.reload();
   }
 })
-
  </script>
 
 <div id="footer"></div>
