--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+        
 
         <link href="https://fonts.cdnfonts.com/css/fruinky" rel="stylesheet">
         <link href="https://fonts.cdnfonts.com/css/levitation" rel="stylesheet">
@@ -74,17 +75,40 @@
         mix-blend-mode: multiply;
       }
     </style>
-    <div class="jumpbotron jumpbotron-fluid">
-      <div class="container">
-        <video autoplay muted preload loop><source src="famevideo.mp4" type="video/mp4"></video>
-        <h1 class="titulo">BIENVENIDOS A MI PAGINA</h1>
-      </div><br>
-    </div>
-      <div id="footer"></div>
-<script>
-  $(function(){
-    $("#footer").load("/footer.html");
-  });
-</script>
+    </script>
+    
+   <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="fotter-section about">
+        <h2>Contactame</h2>
+        <p>si estas interesado en contactarme,puedes hacerlo a atraves de cualquiera de las siguientes 
+            redes Sociales:</p>
+            <div class="contact-links">
+            <a href="http://www.facebook.com/miperfil" 
+            target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="http://www.instagram.com/miperfil" 
+            target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="http://www.twitter.com/miperfil" 
+            target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="http://www.discord.com/miperfil" 
+            target="_blank"><i class="fab fa-discord"></i></a>
+            <a href="http://www.pinterest.com/miperfil" 
+            target="_blank"><i class="fab fa-pinterest"></i></a>
+            </div>
+            </div>
+           </div>
+         </div>
+    <script>
+        //este siguiente codigo es para que los enlaces se abran en una nueva pestaña
+        const redessociales = document.querySelectorAll('.contact-links');
+        redessociales.forEach(link =>{
+            link.addEventListener('click', e => {
+                e.preventDefault();
+                window.open(link.href, '_blank');
+            });
+        });
+    </script>
+ </footer>
 </body>
 </html>
