--- a/footer.html
+++ b/footer.html
@@ -22,6 +22,10 @@
         target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="http://www.twitter.com/miperfil" 
         target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="http://www.youtube.com/miperfil" 
+        target="_blank"><i class="fab fa-youtube"></i></a>
+        <a href="http://www.discord.com/miperfil" 
+        target="_blank"><i class="fab fa-discord"></i></a>
         </div>
       </div>
     </div>
